# Intersection-between-cylinder-and-plane-PCL

./: CMakeLists.txt  README.md
Problem_with_robest_circle_fitting/: erreur  radius_angle_1
Problem_with_robest_circle_fitting/Lmeds/: circle_data_1  circle_data_2  circle_data_3  circle_data_4  test_data_1
entete/: FunctionsSearchIntersection.hpp  circle_regression.hpp  figures.hpp  visualisation.hpp
source/: FunctionsSearchIntersection.cpp  circle_regression.cpp  figures.cpp  main.cpp  visualisation.cpp
